started working on a second page

--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -4,7 +4,7 @@
 <head>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="icon" href="../logos/cre8logo.png" type="image/x-icon" />
-		<title>cre8 cre8tive team</title>
+		<title>cre8 Procrastination campaign</title>
 		
 		<script> 
 			
@@ -119,9 +119,13 @@
 				</div>
 			
 			</div>
-			
-
-			
+		</div>
+		
+		<div id = "second-page">
+			<p class = "title">But what can <strong> you </strong> do? </p> 
+			<br> <br>
+			<p style = "margin-left: 5em; font-size: 3em;"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank">Instagram </a></p>
+			<img src = "phone_outline.png" id = "phone"></img>
 		</div>
 
 	</body><!-- https://support.google.com/calendar/answer/41207?hl=en -->
