--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -125,7 +125,12 @@
 			<p class = "title">But what can <strong> you </strong> do? </p> 
 			<br> <br>
 			<p style = "margin-left: 5em; font-size: 3em;"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank">Instagram </a></p>
-			<img src = "phone_outline.png" id = "phone"></img>
+			<img src = "Photos/phone_outline.png" id = "phone"></img>
+			<img src = "Photos/instagram.jpg" id = "insta-image"></img>
+			<span id = "instagram-description"> <p class = "paragraphs">There you can find some posters, connected to the topic of procrastination. </p> <p class = "paragraphs"> You can also look at our PSA video <a href = "" style = "color: blue;"> here </a>. </p>
+				<p class = "paragraphs"> But don't forget that you can always do something productive.</p> <p style = "text-align: center; margin-left: 2em; margin-right: 2em;">Just think about the <b> story </b> you are writing.</p>
+				
+			</span>
 		</div>
 
 	</body><!-- https://support.google.com/calendar/answer/41207?hl=en -->
