--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -129,7 +129,7 @@
 		<div id = "second-page">
 			<p class = "title">But what can <strong> you </strong> do? </p> 
 			<br> <br>
-			<p style = "margin-left: 5em; font-size: 3em;"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank">Instagram </a></p>
+			<p class = "plug"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank"><u>Instagram</u></a></p>
 			<img src = "Photos/phone_outline.png" id = "phone"></img>
 			<img src = "Photos/instagram.jpg" id = "insta-image"></img>
 			<span id = "instagram-description"> <p class = "paragraphs">There you can find some posters, connected to the topic of procrastination. </p> <p class = "paragraphs"> You can also look at our PSA video <a href = "" style = "color: blue;"> here</a>. </p>
