added logos to the parent site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 		<meta charset="utf-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<link rel="icon" href="logos/cre8logo.png" type="image/x-icon" />
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<title>Cre8</title>
 	</head>
@@ -12,7 +13,7 @@
 
 		<header>				
 			<nav>
-				<ul> <div class = "under_the_logo"> LOGO </div>	
+				<ul> <img class = "under_the_logo" src = "logos/secondlogo.png"> </div>	
 					<div class = "black_background">
 						<div class = "navigate">
 							<li class = "to_the_right"><a href = "" class = "navigation">Contacts</a></li>
