started working on the third page

--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -137,6 +137,21 @@
 				
 			</span>
 		</div>
+		
+		<div id = "third-page"> 
+			<p class = "deceptive"> Check out some of our other projects </p>
+			
+			<section class="images">
+				
+				<figure class = "cat-photo"> <img src="Photos/cat.jpg" alt = "cute cat photo"> 
+					<figcaption class = "photo-description">
+						<p> See our collection of cute cat photos </p>
+						<a href="" class = "button button-accent button-small"> Open </a>
+					</figcaption>
+				</figure>
+			</section>
+	
+		</div>
 
-	</body><!-- https://support.google.com/calendar/answer/41207?hl=en -->
+	</body>
 </html>
