--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -170,6 +170,10 @@
 
 		<div id = "fourth-page"> 
 			<img src = "Photos/tim.jpg" id = "dr-photo"> </img>
+			<p id = "quotation-mark">”</p>
+			<p id = "quote"> Motivation follows action. Get started, and you will find your motivation follows.”</p>
+			<div id = "citat-line"> </div>
+			<p id = "citation"> Dr. Pychyl </p>
 		</div>
 		
 	</body>
