--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -177,4 +177,12 @@
 		</div>
 		
 	</body>
+	
+	<footer> 
+		
+		<img src = "../logos/secondlogo.png" id = "logo">
+		<p id = "copyright"> Copyright &copy; 2019  |   <a href = "http://cre8.cf" style= "text-decoration: none; color: black; text-decoration: underline;"> Contact us </a></p>
+		
+	</footer>
+	
 </html>
