--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -174,6 +174,8 @@
 			<p id = "quote"> Motivation follows action. Get started, and you will find your motivation follows.”</p>
 			<div id = "citat-line"> </div>
 			<p id = "citation"> Dr. Pychyl </p>
+			
+			<img src = "Photos/Darts.JPG" id = "darts"> </img>
 		</div>
 		
 	</body>
