--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -48,13 +48,18 @@
 		
 		<div id = "dictionary"> 
 			<div id = "definition">
-				<h4 style = "font-size: 2em; margin: 0; border-bottom: solid; border-bottom-color: #333333; border-bottom-width: 2px; padding-bottom: 0.2em;"> procrastinate </h4>
-				<p style = "margin-top: 1em;"> verb | ​/prəˈkræs.tɪ.neɪt/ </p>
+				<h4> procrastinate </h4>
+				<p> verb | ​/prəˈkræs.tɪ.neɪt/ </p>
 				<ul style = "list-style-type: circle;"> 
-				<li style = "font-size: 1.5em;"> to put off till another day or time; defer; delay: 
+				<li> to put off till another day or time; defer; delay: 
 				<p style = "font-size: 0.8em; margin-top: 0.5em; font-style: italic; "> It is not professinal to procrastinate. </p>
 				</li> </ul>
 				 <a href="#first-page" class="arrow down"> Down </a>
+			</div>
+			
+			<div id = "message_about_procrastination">
+				<p> Procrastination may not be a serious issue in the world today, but it should not be underestimated. <a href = "" style = "color: blue;"> Here</a> you can find more information about the topic, and <a href = "https://www.mindtools.com/pages/article/newHTE_96.htm" style = "color: blue;"> here</a> you can find 
+				a good guide on how to deal with procrastination. </p>
 			</div>
 		</div>
 		
