--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -167,6 +167,7 @@
 		</div>
 		
 		<div id = "second-page">
+			<img src = "Photos/bulb.gif" style = "position: absolute; width: 200px; height: auto; "></img>
 			<p class = "title">But what can <strong> you </strong> do? </p> 
 			<br> <br>
 			<p class = "plug"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank"><u>Instagram</u></a></p>
