added a new page

--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -58,7 +58,7 @@
 			</div>
 			
 			<div id = "message_about_procrastination">
-				<p> Procrastination may not be a serious issue in the world today, but it should not be underestimated. <a href = "" style = "color: blue;"> Here</a> you can find more information about the topic, and <a href = "https://www.mindtools.com/pages/article/newHTE_96.htm" style = "color: blue;"> here</a> you can find 
+				<p> Procrastination may not be a serious issue in the world today, but it should not be underestimated. <a href = "procrastination_information.html" style = "color: blue;"> Here</a> you can find more information about the topic, and <a href = "https://www.mindtools.com/pages/article/newHTE_96.htm" style = "color: blue;"> here</a> you can find 
 				a good guide on how to deal with procrastination. </p>
 			</div>
 		</div>
