--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -173,7 +173,7 @@
 			<p class = "plug"> Visit our <a href = "https://www.instagram.com/procrastination.cre8" style= "text-decoration: none; color: black;" target="_blank"><u>Instagram</u></a></p>
 			<img src = "Photos/phone_outline.png" id = "phone"></img>
 			<img src = "Photos/instagram.jpg" id = "insta-image"></img>
-			<span id = "instagram-description"> <p class = "paragraphs">There you can find some posters, connected to the topic of procrastination. </p> <p class = "paragraphs"> You can also look at our PSA video <a href = "https://www.youtube.com/watch?v=A0aBkCY04XA" style = "color: blue;"> here</a>. </p>
+			<span id = "instagram-description"> <p class = "paragraphs">There you can find some posters, connected to the topic of procrastination. </p> <p class = "paragraphs"> You can also look at our PSA video <a href = "https://youtu.be/w7ifqaUKfLM" style = "color: blue;"> here</a>. </p>
 				<p class = "paragraphs"> But don't forget that you can always do something productive.</p> <p style = "text-align: center; margin-left: 2em; margin-right: 2em;">Just think about the <b> story </b> you are writing.</p>
 				
 			</span>
