fixed an encoding issue

--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -49,7 +49,7 @@
 		<div id = "dictionary"> 
 			<div id = "definition">
 				<h4> procrastinate </h4>
-				<p> verb | ​/prəˈkræs.tɪ.neɪt/ </p>
+				<p> verb | /pr&#601;&#712;kr&aelig;s.t&#618;.ne&#618;t/ </p>
 				<ul style = "list-style-type: circle;"> 
 				<li> to put off till another day or time; defer; delay: 
 				<p style = "font-size: 0.8em; margin-top: 0.5em; font-style: italic; "> It is not professinal to procrastinate. </p>
