fixed the slogan

--- a/procrastination/index.html
+++ b/procrastination/index.html
@@ -52,7 +52,7 @@
 				<p> verb | /pr&#601;&#712;kr&aelig;s.t&#618;.ne&#618;t/ </p>
 				<ul style = "list-style-type: circle;"> 
 				<li> to put off till another day or time; defer; delay: 
-				<p style = "font-size: 0.8em; margin-top: 0.5em; font-style: italic; "> It is not professinal to procrastinate. </p>
+				<p style = "font-size: 0.8em; margin-top: 0.5em; font-style: italic; "> Professionals don't procrastinate. </p>
 				</li> </ul>
 				 <a href="#first-page" class="arrow down"> Down </a>
 			</div>
